Colaboratory를 통해 생성됨

--- a/7강_실습.ipynb
+++ b/7강_실습.ipynb
@@ -42,7 +42,16 @@
       },
       "outputs": [],
       "source": [
-        "sum = sum + i\n"
+        "sum = sum + i\n",
+        "while True:\n",
+        "    sum = sum + i\n",
+        "\n",
+        "sum = 0\n",
+        "i = 1\n",
+        "last = int(input(\"어디까지 더할까요?: \"))\n",
+        "while i <= last:\n",
+        "    sum = sum + i\n",
+        "    i = i + 1"
       ]
     },
     {
@@ -58,7 +67,7 @@
       "cell_type": "code",
       "source": [
         "base = int(input(\"출력할 단을 입력하세요: \"))\n",
-        "\n"
+        "sup =\n"
       ],
       "metadata": {
         "id": "Qpef1B4avXCU"
