Colaboratory를 통해 생성됨

--- a/7강_실습.ipynb
+++ b/7강_실습.ipynb
@@ -36,22 +36,66 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "9pzywTqbu-M8"
+        "id": "9pzywTqbu-M8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fb32acfe-a37b-4380-a1c6-bbd674d8806b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "어디까지 더할까요?: 5\n",
+            "15\n"
+          ]
+        }
+      ],
       "source": [
-        "sum = sum + i\n",
-        "while True:\n",
-        "    sum = sum + i\n",
-        "\n",
         "sum = 0\n",
         "i = 1\n",
         "last = int(input(\"어디까지 더할까요?: \"))\n",
         "while i <= last:\n",
         "    sum = sum + i\n",
-        "    i = i + 1"
+        "    i = i + 1\n",
+        "\n",
+        "print(sum)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"어디까지 더할까요?:\"))\n",
+        "\n",
+        "sum = 0\n",
+        "i = 1\n",
+        "\n",
+        "while i <= num :\n",
+        "    sum = sum + i\n",
+        "    i = i + 1\n",
+        "\n",
+        "print(sum)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "y3ldNj648NOJ",
+        "outputId": "41c8ed6f-c69b-4f27-b9c6-52e5e4385156"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "어디까지 더할까요?:5\n",
+            "15\n"
+          ]
+        }
       ]
     },
     {
@@ -67,13 +111,38 @@
       "cell_type": "code",
       "source": [
         "base = int(input(\"출력할 단을 입력하세요: \"))\n",
-        "sup =\n"
+        "\n",
+        "i = 1\n",
+        "while i <= 9:\n",
+        "    print(base, \"X\", i, \"=\", base * i)\n",
+        "    i = i + 1"
       ],
       "metadata": {
-        "id": "Qpef1B4avXCU"
+        "id": "Qpef1B4avXCU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3fa6846c-85a6-4e5b-84df-1097dac1638a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "출력할 단을 입력하세요: 6\n",
+            "6 X 1 = 6\n",
+            "6 X 2 = 12\n",
+            "6 X 3 = 18\n",
+            "6 X 4 = 24\n",
+            "6 X 5 = 30\n",
+            "6 X 6 = 36\n",
+            "6 X 7 = 42\n",
+            "6 X 8 = 48\n",
+            "6 X 9 = 54\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
