Colaboratory를 통해 생성됨

--- a/7강_실습.ipynb
+++ b/7강_실습.ipynb
@@ -158,13 +158,31 @@
       "source": [
         "# 리스트 생성\n",
         "hei_list = [1, 4, 14, 26, 31]\n",
-        "\n"
+        "\n",
+        "for hei in hei_list :\n",
+        "    print(hei)"
       ],
       "metadata": {
-        "id": "3Zgal1-gwfGo"
+        "id": "3Zgal1-gwfGo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d2cfc7ab-b4fd-4155-8466-003245041067"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "14\n",
+            "26\n",
+            "31\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,18 +197,47 @@
       "cell_type": "code",
       "source": [
         "rad = 10\n",
+        "hei_list = [1, 5, 14, 26, 31]\n",
         "\n",
-        "#부피&겉넓이 계산\n",
-        "vol = 1/3 * 3.14 * rad ** 2 * hei\n",
-        "surf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
-        "print(\"원뿔의 부피는\" ,vol, \"입니다.\")\n",
-        "print(\"원뿔의 겉넓이는\" ,surf, \"입니다\")"
+        "for hei in hei_list :\n",
+        "    #부피&겉넓이 계산\n",
+        "    vol = 1/3 * 3.14 * rad ** 2 * hei\n",
+        "    surf = 3.14 * rad ** 2 + 3.14 * rad * hei\n",
+        "    print(\"반지름\", rad, \"높이\", hei, \"원뿔\")\n",
+        "    print(\"원뿔의 부피는\" ,vol, \"입니다.\")\n",
+        "    print(\"원뿔의 겉넓이는\" ,surf, \"입니다\")"
       ],
       "metadata": {
-        "id": "gIINGTOsvr9b"
+        "id": "gIINGTOsvr9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "baf0f32b-7123-4f55-d5fc-c1b27325c10c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "반지름 10 높이 1 원뿔\n",
+            "원뿔의 부피는 104.66666666666666 입니다.\n",
+            "원뿔의 겉넓이는 345.4 입니다\n",
+            "반지름 10 높이 5 원뿔\n",
+            "원뿔의 부피는 523.3333333333333 입니다.\n",
+            "원뿔의 겉넓이는 471.0 입니다\n",
+            "반지름 10 높이 14 원뿔\n",
+            "원뿔의 부피는 1465.3333333333333 입니다.\n",
+            "원뿔의 겉넓이는 753.6 입니다\n",
+            "반지름 10 높이 26 원뿔\n",
+            "원뿔의 부피는 2721.333333333333 입니다.\n",
+            "원뿔의 겉넓이는 1130.4 입니다\n",
+            "반지름 10 높이 31 원뿔\n",
+            "원뿔의 부피는 3244.6666666666665 입니다.\n",
+            "원뿔의 겉넓이는 1287.4 입니다\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,6 +260,9 @@
     {
       "cell_type": "code",
       "source": [
+        "#리스트 생성 자동화 : 리스트 내 원소의 규칙성이 있는 경우 생성 자동화를 위한 함수 사용\n",
+        "#range(a, b, k) // a, b 생략시 기본값 a = 0, b = 1\n",
+        "# a부터 b보다 작은 값까지 k씩 증가시켜 시퀀스 생성\n",
         "\n",
         "#부피&겉넓이 계산\n",
         "vol = 1/3 * 3.14 * rad ** 2 * hei\n",
