--- a/9강_실습.ipynb
+++ b/9강_실습.ipynb
@@ -190,12 +190,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#원뿔 계산 결과 출력결과 형식을 상황에 따라 변경하고 싶다면??\n",
+        "def rtn_cone_vol(r, h) :\n",
+        "    if r > 0 and h > 0 :\n",
+        "        # r, h 모두 양수일 때\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
+        "        return vol\n",
+        "    else :\n",
+        "        # r, h가 음수일 때\n",
+        "        print(\"반지름과 높이 값에 양수를 입력하세요.\")\n",
+        "\n",
+        "print(format(rtn_cone_vol(10, 20), \"<20.3f\"), \"입니다.\")"
+      ],
       "metadata": {
-        "id": "X8lfqqRBAQfV"
+        "id": "X8lfqqRBAQfV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8cc36a6c-5ac7-4786-b5b2-080735c638ab"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2093.333             입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
