--- a/9강_실습.ipynb
+++ b/9강_실습.ipynb
@@ -232,12 +232,42 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "#시퀀스 개념 사용\n",
+        "\n",
+        "def rtn_cone_vol_surf(r, h) :\n",
+        "    if r > 0 and h > 0 :\n",
+        "        # r, h 모두 양수일 때\n",
+        "        vol = 1/3 * 3.14 * r ** 2 * h\n",
+        "        surf = 3.14 * r ** 2 + 3.14 * r * h\n",
+        "        return vol, surf\n",
+        "    else :\n",
+        "        # r, h가 음수일 때\n",
+        "        print(\"반지름과 높이 값에 양수를 입력하세요.\")\n",
+        "\n",
+        "#print(rtn_cone_vol_surf(50, 100), \"입니다.\")\n",
+        "vol1, surf1 = rtn_cone_vol_surf(50, 100)\n",
+        "print(vol1, \"입니다.\")\n",
+        "print(surf1, \"입니다.\")"
+      ],
       "metadata": {
-        "id": "cwZ6g1au45RD"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Np-2P8IpPyv6",
+        "outputId": "c682b4f9-6288-4513-dc16-c9223cc678a3"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "261666.66666666666 입니다.\n",
+            "23550.0 입니다.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
