--- a/9강_실습.ipynb
+++ b/9강_실습.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "OhGWjvMSf_uP"
       },
@@ -85,7 +85,7 @@
         },
         "outputId": "2d25db7b-70a4-43c4-944e-9092efaf0ecd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +126,7 @@
         "id": "Eob1CXl4NNir",
         "outputId": "f4cfbd30-5174-40a7-b8e3-1e3711a3369e"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         },
         "outputId": "1ae9e5c0-e257-4225-c355-926228c86adf"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +210,7 @@
         },
         "outputId": "8cc36a6c-5ac7-4786-b5b2-080735c638ab"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
         "id": "Np-2P8IpPyv6",
         "outputId": "c682b4f9-6288-4513-dc16-c9223cc678a3"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,16 +282,44 @@
       "cell_type": "code",
       "source": [
         "a = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
-        "b = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
-        "c = int(input(\"첫번째 숫자를 입력하세요: \"))\n",
+        "b = int(input(\"두번째 숫자를 입력하세요: \"))\n",
+        "c = int(input(\"세번째 숫자를 입력하세요: \"))\n",
         "\n",
-        "def sort3(a, b, c) :"
+        "# 동시할당사용\n",
+        "def sort3(a, b, c) :\n",
+        "    if a > b :\n",
+        "        a, b = b, a\n",
+        "    if a > c :\n",
+        "        a, c = c, a\n",
+        "    if b > c :\n",
+        "        b, c = c, a\n",
+        "\n",
+        "    print(a, b, c)\n",
+        "\n",
+        "sort3(a, b, c)\n",
+        "print(\"출력이후\", a, b, c)\n"
       ],
       "metadata": {
-        "id": "toh-zjeLArWn"
+        "id": "toh-zjeLArWn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "537c2849-aafa-4bd0-bc43-ea4f4cacebdf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "첫번째 숫자를 입력하세요: 4\n",
+            "두번째 숫자를 입력하세요: 2\n",
+            "세번째 숫자를 입력하세요: 1\n",
+            "1 2 1\n",
+            "출력이후 4 2 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
